--- a/content/2025-11-13.md
+++ b/content/2025-11-13.md
@@ -4,18 +4,80 @@ date: 2025-11-13
 ---
 
 - 5 Ways To Transform ITOps With a Human and AI Agent Model [>_](https://thenewstack.io/5-ways-to-transform-itops-with-a-human-and-ai-agent-model/)
+- 650GB of Data (Delta Lake on S3). Polars vs. DuckDB vs. Daft vs. Spark [>_](https://dataengineeringcentral.substack.com/p/650gb-of-data-delta-lake-on-s3-polars)
+- A Practical Guide to Kubernetes Stateful Backup and Recovery [>_](https://dev.to/aws-builders/a-practical-guide-to-kubernetes-stateful-backup-and-recovery-5e9e)
+- A brief look at FreeBSD [>_](https://yorickpeterse.com/articles/a-brief-look-at-freebsd/)
+- AI’s biggest impact isn’t cranking out more code: Why DevEx matters [>_](https://www.dynatrace.com/news/blog/ais-biggest-impact-isnt-cranking-out-more-code-why-devex-matters/)
+- AWS Migration Challenges and Security Vulnerabilities: A Practical Guide [>_](https://www.javacodegeeks.com/2025/11/aws-migration-challenges-and-security-vulnerabilities-a-practical-guide.html)
+- Big Tech’s Climate Strategists Feeling Strain of AI Power Needs [>_](https://www.datacenterknowledge.com/sustainability/big-tech-s-climate-strategists-feeling-strain-of-ai-power-needs)
+- Boost Developer productivity and DBOps efficiency with AWS Aurora Cloning [>_](https://dev.to/aws-builders/boost-developer-productivity-and-dbops-efficiency-with-aws-aurora-cloning-5cc8)
+- Build Complex Workflows with n8n & Master AI Integration [>_](https://www.freecodecamp.org/news/build-complex-workflows-with-n8n-and-master-ai-integration/)
 - Build Your Kubernetes Monitoring Foundation with kube-prometheus-stack [>_](https://last9.io/blog/kube-prometheus-stack)
 - Building a CI/CD Pipeline Runner from Scratch in Python [>_](https://muhammadraza.me/2025/building-cicd-pipeline-runner-python/)
+- Building resilient infrastructure in regulated environments: 7 Lessons from IG Group&rsquo;s journey [>_](https://www.hashicorp.com/blog/building-resilient-infrastructure-in-regulated-environments-7-lessons-from-ig-group)
+- Building with Forge: Recap from the Atlassian Builders’ Summit [>_](https://www.atlassian.com/blog/developer/building-with-forge-recap-from-the-atlassian-builders-summit)
+- Cagent Comes to Docker Desktop with Built-In IDE Support through ACP [>_](https://www.docker.com/blog/cagent-comes-to-docker-desktop-with-built-in-ide-support-through-acp/)
+- Canonical To Now Provide Up To 15 Years Commercial Support For Ubuntu LTS Releases [>_](https://lxer.com/module/newswire/ext_link.php?rid=359327)
 - Cisco Recognized as a Major Player in the 2025 IDC XDR MarketScape [>_](https://feedpress.me/link/23535/17208511/cisco-recognized-as-a-major-player-in-the-2025-idc-xdr-marketscape)
+- ClickPipes for Postgres now supports failover replication slots [>_](https://clickhouse.com/blog/clickpipes-postgres-failover-replication)
+- Control logging costs on any SIEM or data lake using Packs with Observability Pipelines [>_](https://www.datadoghq.com/blog/manage-high-volume-logs-with-observability-pipeline-packs/)
+- Debian Contributions: Upstreaming cPython patches, ansible-core autopkgtest robustness and more! (by Anupa Ann Joseph) [>_](https://www.freexian.com/blog/debian-contributions-10-2025/)
 - Debugging ECR Private Pull Through Cache [>_](https://dev.to/aws-builders/debugging-ecr-private-pull-through-cache-5d17)
+- Debugging containers that have no shell [>_](https://docs.docker.com/reference/cli/docker/debug)
 - Distributing Data in a Redis/Valkey Cluster: Slots, Hash Tags, and Hot Spots [>_](https://www.percona.com/blog/distributing-data-in-a-redis-valkey-cluster-slots-hash-tags-and-hot-spots/)
 - Docker Engine 29: Containerd Becomes Default, Experimental nftables Support [>_](https://lxer.com/module/newswire/ext_link.php?rid=359285)
+- Finding the grain of sand in a heap of Salt [>_](https://blog.cloudflare.com/finding-the-grain-of-sand-in-a-heap-of-salt/)
+- From Chaos to Control: How Unified DevOps and SRE Streamline Cloud Operations [>_](https://medium.com/@devseccops.ai/from-chaos-to-control-how-unified-devops-and-sre-streamline-cloud-operations-b85ade26d549?source=rss------sre-5)
 - Future-Proofing Data Centers: Critical Design Decisions [>_](https://www.datacenterknowledge.com/data-center-construction/future-proofing-data-centers-critical-design-decisions)
+- GPU Observability: Get Deeper Insights into Your Droplets and DOKS Clusters [>_](https://www.digitalocean.com/blog/now-available-gpu-doks-observability)
+- Google Cloud Infrastructure Manager Deep Dive [>_](https://medium.com/google-cloud/google-cloud-infrastructure-manager-tutorial-40b545c3e5da?source=rss----e52cf94d98af---4)
+- Google Cloud Introduces Chaos Engineering Framework and Recipes for Distributed Systems [>_](https://www.infoq.com/news/2025/11/google-chaos-engineering/?utm_campaign=infoq_content&utm_source=infoq&utm_medium=feed&utm_term=global)
+- Google Colab is Coming to VS Code [>_](https://developers.googleblog.com/en/google-colab-is-coming-to-vs-code/)
 - Google Extends Kubernetes Service to Safely Run Agentic AI Workloads [>_](https://cloudnativenow.com/features/google-extends-kubernetes-service-to-safely-run-agentic-ai-workloads/)
+- HashiCorp’s New Guide Offers Practical Advice on Writing and Rightsizing Terraform Modules [>_](https://www.infoq.com/news/2025/11/advice-rightsizing-terraform/?utm_campaign=infoq_content&utm_source=infoq&utm_medium=feed&utm_term=global)
+- Heartbeats in Distributed Systems [>_](https://arpitbhayani.me/blogs/heartbeats-in-distributed-systems/)
 - Helm v4.0.0 [>_](https://github.com/helm/helm/releases/tag/v4.0.0)
+- How Copilot helps build the GitHub platform [>_](https://github.blog/ai-and-ml/github-copilot/how-copilot-helps-build-the-github-platform/)
+- How Merkle Science fights crypto crime at scale with ClickHouse Cloud [>_](https://clickhouse.com/blog/merkle-science-crypto-crime-at-scale)
+- How To Build an AI-First Organization, One Engineer at a Time [>_](https://thenewstack.io/how-to-build-an-ai-first-organization-one-engineer-at-a-time/)
 - How To Deploy an Open Source Version of NotebookLM [>_](https://thenewstack.io/how-to-deploy-an-open-source-version-of-notebooklm/)
+- How To Migrate Python Packages Between Virtual Environments In Linux [>_](https://lxer.com/module/newswire/ext_link.php?rid=359323)
+- How to Install GCC on Ubuntu 25.04: A Step-By-Step Guide [>_](https://lxer.com/module/newswire/ext_link.php?rid=359315)
+- How to Integrate Vector Search in Columnar Storage [>_](https://www.freecodecamp.org/news/how-to-integrate-vector-search-in-columnar-storage/)
+- How to Parse XML in Python Without Using External Libraries [>_](https://www.freecodecamp.org/news/how-to-parse-xml-in-python-without-using-external-libraries/)
+- How to Set Up Your Own Google Analytics Alternative Using Umami [>_](https://www.freecodecamp.org/news/how-to-set-up-your-own-google-analytics-alternative-using-umami/)
+- How to build an AI-powered notification pipeline with Gemini, BigQuery, and Google Chat [>_](https://medium.com/google-cloud/how-to-build-an-ai-powered-notification-pipeline-with-gemini-bigquery-and-google-chat-51ee980418e6?source=rss----e52cf94d98af---4)
+- How to generate and copy SSH key [>_](https://sleeplessbeastie.eu/2025/11/13/how-to-generate-and-copy-ssh-key/)
+- Hunting Reverse Shells: How the Sysdig Threat Research Team builds smarter detection rules [>_](https://www.sysdig.com/blog/hunting-reverse-shells-how-the-sysdig-threat-research-team-builds-smarter-detection-rules)
+- Introducing AWS IoT Core Device Location integration with Amazon Sidewalk [>_](https://aws.amazon.com/blogs/aws/introducing-aws-iot-core-device-location-integration-with-amazon-sidewalk/)
+- Introducing Code Wiki: Accelerating your code understanding [>_](https://developers.googleblog.com/en/introducing-code-wiki-accelerating-your-code-understanding/)
 - Introducing longhornctl: The Command-Line Interface for SUSE Storage [>_](https://www.suse.com/c/introducing-longhornctl-the-command-line-interface-for-suse-storage/)
+- Introducing to Kiro & IDE [>_](https://dev.to/aws-builders/introducing-to-kiro-170b)
+- Java Weekly, Issue 620 [>_](https://www.baeldung.com/java-weekly-620)
 - Knative Has Finally Graduated From the CNCF [>_](https://thenewstack.io/knative-has-finally-graduated-from-the-cncf/)
+- KubeCon NA 2025 - Salesforce’s Approach to Self-Healing Using AIOps and Agentic AI [>_](https://www.infoq.com/news/2025/11/salesforce-self-healing-aiops/?utm_campaign=infoq_content&utm_source=infoq&utm_medium=feed&utm_term=global)
+- KubeCon: A Terraform Killer Built on Apple’s Pkl [>_](https://thenewstack.io/kubecon-a-terraform-killer-built-on-apples-pkl/)
 - Kubernetes Is Your Private Cloud [>_](https://oneuptime.com/blog/post/2025-11-12-kubernetes-is-your-private-cloud/view)
+- MCP Horror Stories: The WhatsApp Data Exfiltration Attack [>_](https://www.docker.com/blog/mcp-horror-stories-whatsapp-data-exfiltration-issue/)
+- Make SSH as Easy as FTP with SSH Pilot [>_](https://lxer.com/module/newswire/ext_link.php?rid=359301)
+- Managing SUSE Workloads in AWS – When do you need a private repository? [>_](https://www.suse.com/c/managing-suse-workloads-in-aws-when-do-you-need-a-private-repository/)
+- Mastering Workloads in Kubernetes with Kueue — part 3: Embracing Fair Sharing [>_](https://medium.com/google-cloud/mastering-workloads-in-kubernetes-with-kueue-part-3-embracing-fair-sharing-8fef4d7fc13f?source=rss----e52cf94d98af---4)
+- Mergiraf: Syntax-Aware Merging for Git [>_](https://lwn.net/SubscriberLink/1042355/434ad706cc594276/)
+- Microsoft Ignite 2025: Turn complexity into a strategic asset in the age of AI [>_](https://www.dynatrace.com/news/blog/microsoft-ignite-2025-turn-complexity-into-a-strategic-asset-in-the-age-of-ai/)
 - Open Source KServe AI Inference Platform Becomes CNCF Project [>_](https://cloudnativenow.com/features/open-source-kserve-ai-inference-platform-becomes-cncf-project/)
+- Overview of NVMe Architecture [>_](https://blogs.oracle.com/linux/overview-of-nvme-architecture)
+- PostgreSQL 18.1, 17.7, 16.11, 15.15, 14.20, and 13.23 Released! [>_](https://www.postgresql.org/about/news/postgresql-181-177-1611-1515-1420-and-1323-released-3171/)
+- PostgreSQL 19: Logical replication of sequences [>_](https://www.dbi-services.com/blog/postgresql-19-logical-replication-of-sequences/)
+- Python in Visual Studio Code – November 2025 Release [>_](https://devblogs.microsoft.com/python/python-in-visual-studio-code-november-2025-release/)
+- Rate-limiting calls to Amazon DynamoDB using Python Boto3, Part 1 [>_](https://aws.amazon.com/blogs/database/rate-limiting-calls-to-amazon-dynamodb-using-python-boto3-part-1/)
+- Rate-limiting calls to Amazon DynamoDB using Python Boto3, Part 2: Distributed Coordination [>_](https://aws.amazon.com/blogs/database/rate-limiting-calls-to-amazon-dynamodb-using-python-boto3-part-2-distributed-coordination/)
 - Red Hat&#039;s RHEL 10.1 Released With systemd Soft-Reboots, Easier AI Accelerator Drivers [>_](https://lxer.com/module/newswire/ext_link.php?rid=359297)
+- Reliability at Scale: How Engineering Leaders Define SLIs, SLOs & SLAs [>_](https://medium.com/@gupta.rishabh2912/reliability-at-scale-how-engineering-leaders-define-slis-slos-slas-14caf83666f8?source=rss------sre-5)
+- Ruby 4.0 is on the way [>_](https://rubyweekly.com/issues/775)
+- Secure by Design: The Future of Threat Modeling for AI-Native Applications [>_](https://snyk.io/blog/future-threat-modeling-ai-native-apps/)
+- Sparky Linux 8.1 Update Rolls Out with Plasma 6.3.6, LXQt 2.1, and Xfce 4.20 [>_](https://lxer.com/module/newswire/ext_link.php?rid=359283)
+- Switching from GPG to Age [>_](https://luke.hsiao.dev/blog/gpg-to-age/)
+- The Ultimate Guide to Linux Command Line for Cloud Engineers [>_](https://dev.to/aws-builders/the-ultimate-guide-to-linux-command-line-for-cloud-engineers-4dd3)
+- Understand, diagnose, and optimize SQL queries: Introducing Grafana Cloud Database Observability [>_](https://grafana.com/blog/2025/11/13/understand-diagnose-and-optimize-sql-queries-introducing-grafana-cloud-database-observability/)
+- Upgrades to Pipelines Artifacts: New Artifact Types & Selective Download [>_](https://www.atlassian.com/blog/bitbucket/launch-blog-upgrades-to-artifacts-new-artifact-types-selective-download)
+- Why API Gateways Aren’t Good for East-West Traffic [>_](https://nordicapis.com/why-api-gateways-arent-good-for-east-west-traffic/)
